Modified location of welsh-language include file for nginx

--- a/docker-compose-nrw.yml
+++ b/docker-compose-nrw.yml
@@ -61,4 +61,4 @@ services:
 
   nginx:
     volumes:
-      - ./nrw/nginx/servers/cyfoethnaturiol_cymru.inc:/etc/nginx/conf.d/cyfoethnaturiol_cymru.inc
+      - ./nrw/nginx/servers/cyfoethnaturiol_cymru.inc:/etc/nginx/servers/cyfoethnaturiol_cymru.inc
