--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,45 +40,37 @@ services:
       GEONETWORK_DB_HOST: ${POSTGRES_DB_HOST}
       GEONETWORK_DB_PORT: ${POSTGRES_DB_PORT}
       GEONETWORK_DB_NAME: ${POSTGRES_DB_NAME}
-      #GEONETWORK_DB_POOL_MAXACTIVE: ${POSTGRES_DB_MAXACTIVE}
       GEONETWORK_DB_USERNAME: ${POSTGRES_DB_USERNAME}
       GEONETWORK_DB_PASSWORD: ${POSTGRES_DB_PASSWORD}
       GEONETWORK_MICROSERVICESPROXY_TARGETURI: http://ogc-api-records-service:8080
 
     volumes:
-      # general overrides
+      ### General overrides ###
       - /data/geonetwork:/catalogue-data
       - ./thesauri/external/thesauri/theme:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/codelist/external/thesauri/theme
-      - ./geonetwork/catalog/locales/en-admin.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-admin.json
-      - ./geonetwork/catalog/locales/en-core.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-core.json
-      - ./geonetwork/catalog/locales/en-editor.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-editor.json
-      - ./geonetwork/catalog/locales/en-custom.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-custom.json
+      - ./elasticsearch/records.json:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/index/records.json
+      ### UI overrides ###
+      # Style changes (*.less / *.css files)
+      - ./geonetwork/catalog/views/default/less/gn_editor_default.less:/var/lib/jetty/webapps/geonetwork/catalog/views/default/less/gn_editor_default.less
+      - ./geonetwork/catalog/views/default/less/gn_search_default.less:/var/lib/jetty/webapps/geonetwork/catalog/views/default/less/gn_search_default.less
+      - ./geonetwork/catalog/style/gn_metadata.less:/var/lib/jetty/webapps/geonetwork/catalog/style/gn_metadata.less
+      # Layout changes (*.html files)
       - ./geonetwork/catalog/views/default/templates/recordView/technical.html:/var/lib/jetty/webapps/geonetwork/catalog/views/default/templates/recordView/technical.html
       - ./geonetwork/catalog/templates/admin/usergroup/users.html:/var/lib/jetty/webapps/geonetwork/catalog/templates/admin/usergroup/users.html
-      # update records.json file to match core
-      - ./elasticsearch/records.json:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/index/records.json
-      # dashboards
-      - ./geonetwork/catalog/js/admin/DashboardController.js:/var/lib/jetty/webapps/geonetwork/catalog/js/admin/DashboardController.js
-      # datepicker layout fix
       - ./geonetwork/catalog/components/edit/datepicker/partials/datepicker.html:/var/lib/jetty/webapps/geonetwork/catalog/components/edit/datepicker/partials/datepicker.html
       - ./geonetwork/catalog/templates/top-toolbar.html:/var/lib/jetty/webapps/geonetwork/catalog/templates/top-toolbar.html
       - ./geonetwork/catalog/templates/top-toolbar-accessible.html:/var/lib/jetty/webapps/geonetwork/catalog/templates/top-toolbar-accessible.html
-      - ./geonetwork/catalog/views/default/less/gn_editor_default.less:/var/lib/jetty/webapps/geonetwork/catalog/views/default/less/gn_editor_default.less
-      # remove service records info from homepage
       - ./geonetwork/catalog/views/default/templates/home.html:/var/lib/jetty/webapps/geonetwork/catalog/views/default/templates/home.html
-      # group logo
-      - ./geonetwork/catalog/views/default/less/gn_search_default.less:/var/lib/jetty/webapps/geonetwork/catalog/views/default/less/gn_search_default.less
-      - ./geonetwork/catalog/components/utility/UtilityDirective.js:/var/lib/jetty/webapps/geonetwork/catalog/components/utility/UtilityDirective.js
       - ./geonetwork/catalog/components/utility/partials/recordOriginLogo.html:/var/lib/jetty/webapps/geonetwork/catalog/components/utility/partials/recordOriginLogo.html
       - ./geonetwork/catalog/views/default/templates/recordView/metadata.html:/var/lib/jetty/webapps/geonetwork/catalog/views/default/templates/recordView/metadata.html
-      - ./geonetwork/catalog/style/gn_metadata.less:/var/lib/jetty/webapps/geonetwork/catalog/style/gn_metadata.less
-      - ./geonetwork/catalog/locales/en-search.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-search.json
-      # help link override
+      # Functionality changes (*.js files)
+      - ./geonetwork/catalog/js/admin/DashboardController.js:/var/lib/jetty/webapps/geonetwork/catalog/js/admin/DashboardController.js
+      - ./geonetwork/catalog/components/utility/UtilityDirective.js:/var/lib/jetty/webapps/geonetwork/catalog/components/utility/UtilityDirective.js
       - ./geonetwork/catalog/components/common/needhelp/NeedHelpDirective.js:/var/lib/jetty/webapps/geonetwork/catalog/components/common/needhelp/NeedHelpDirective.js
+      ### Schema overrides ###
       # data quality snippets
       - ../geonetwork-snippets/gemini23-index-fields/index-subtemplate.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.gemini23/index-fields/index-subtemplate.xsl
       - ../geonetwork-snippets/iso19139-index-fields/index-subtemplate.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/index-fields/index-subtemplate.xsl
-      # schema overrides
       # gemini 2.3
       - ../iso19139.gemini23/src/main/plugin/iso19139.gemini23:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.gemini23
       - ../iso19139.gemini23/src/main/config/translations/en-schema-iso19139.gemini23.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-schema-iso19139.gemini23.json
@@ -120,7 +112,6 @@ services:
     - ./ogc-api/copy/copy-iso19139.gemini22.xsl:/workspace/BOOT-INF/classes/xslt/ogcapir/formats/copy/copy-iso19139.gemini22.xsl
     - ./ogc-api/src/main/resources/xslt/ogcapir/landingpage.xsl:/workspace/BOOT-INF/classes/xslt/ogcapir/landingpage.xsl
     - ./ogc-api/src/main/resources/xslt/ogcapir/collections.xsl:/workspace/BOOT-INF/classes/xslt/ogcapir/collections.xsl
-    #- ./ogc-api/src/main/resources/xslt/ogcapir/collection.xsl:/workspace/BOOT-INF/classes/xslt/ogcapir/collection.xsl
     container_name: ogc-api-service
     networks:
       - esnet
