--- a/docker-compose-nrw.yml
+++ b/docker-compose-nrw.yml
@@ -57,6 +57,8 @@ services:
       - ./nrw/geonetwork/xslt/base-layout-cssjs-loader.xsl:/var/lib/jetty/webapps/geonetwork/xslt/base-layout-cssjs-loader.xsl
       # show OGL logo on record page
       - ./nrw/geonetwork/catalog/js/mdviewModule.js:/var/lib/jetty/webapps/geonetwork/catalog/components/search/mdview/mdviewModule.js
+      # change error for creating records with duplicate UUIDs
+      - ./nrw/geonetwork/catalog/js/NewMetadataController.js:/var/lib/jetty/webapps/geonetwork/catalog/js/edit/NewMetadataController.js
       ### NRW font files ###
       - ./nrw/geonetwork/catalog/style/GothamRnd-Medium.otf:/var/lib/jetty/webapps/geonetwork/catalog/style/GothamRnd-Medium.otf
       - ./nrw/geonetwork/catalog/style/GothamRnd-MedIta.otf:/var/lib/jetty/webapps/geonetwork/catalog/style/GothamRnd-MediumIta.otf
