--- a/.env.sample
+++ b/.env.sample
@@ -9,7 +9,6 @@ GN_ADMIN_PASSWORD=
 GN_PROTOCOL=http
 GN_URL=
 GN_SITE_NAME=
-GN_VERSION=4.2.5
 
 
 # Datahub
@@ -49,8 +48,8 @@ ES_PASSWORD=
 
 # Keycloak
 OPENIDCONNECT_CLIENTSECRET=
-OPENIDCONNECT_CLIENTID=gn-client
-OPENIDCONNECT_IDTOKENROLELOCATION=resource_access.gn-client.roles
+OPENIDCONNECT_CLIENTID=
+OPENIDCONNECT_IDTOKENROLELOCATION=
 OPENIDCONNECT_LOGSENSITIVE_INFO=true
 OPENIDCONNECT_ROLECONVERTER=
 OPENIDCONNECT_SERVERMETADATA_FNAME=/WEB-INF/config-security/openid-configuration.json
