--- a/docker-compose-zeppelin.yml
+++ b/docker-compose-zeppelin.yml
@@ -4,7 +4,7 @@ services:
   zeppelin:
     # image: apache/zeppelin:0.9.0
     #image: apache/zeppelin:0.10.0
-    image: public.ecr.aws/d7m3b2m9/ea-custom-zeppelin:latest
+    image: apache/zeppelin:0.11.1
     # build:
     #   context: ./certs
     #   dockerfile: dockerfile.zeppelin
