--- a/docker-compose-zeppelin.yml
+++ b/docker-compose-zeppelin.yml
@@ -11,10 +11,10 @@ services:
     container_name: zeppelin
     volumes: 
       - /data/zeppelin/notebook:/notebook
-      - ./shiro-geonetwork/geonetwork-integration/target/testshiro-1.0-SNAPSHOT-jar-with-dependencies.jar:/opt/zeppelin/lib/testshiro-1.0-SNAPSHOT-jar-with-dependencies.jar
+      #- ./shiro-geonetwork/geonetwork-integration/target/testshiro-1.0-SNAPSHOT-jar-with-dependencies.jar:/opt/zeppelin/lib/testshiro-1.0-SNAPSHOT-jar-with-dependencies.jar
       - ./zeppelin/zeppelin-logs:/zeppelin/logs
-      - ./shiro-geonetwork/lib/postgresql-42.3.3.jar:/opt/zeppelin/lib/postgresql-42.3.3.jar
-      - ./shiro-geonetwork/conf/shiro.ini:/opt/zeppelin/conf/shiro.ini
+      #- ./shiro-geonetwork/lib/postgresql-42.3.3.jar:/opt/zeppelin/lib/postgresql-42.3.3.jar
+      #- ./shiro-geonetwork/conf/shiro.ini:/opt/zeppelin/conf/shiro.ini
       - ./zeppelin/zeppelin-conf/interpreter-setting.json:/opt/zeppelin/interpreter/jdbc/interpreter-setting.json
       - ./zeppelin/zeppelin-conf/zeppelin-site.xml:/opt/zeppelin/conf/zeppelin-site.xml
       - ./zeppelin/zeppelin-conf/zeppelin-env.sh:/opt/zeppelin/conf/zeppelin-env.sh
