set aria-label to match the value attribute for map coordinates (in full display view). Fixes the accessibility issue in SUPPORT-20271/NRW bug ref 169589

--- a/docker-compose-nrw.yml
+++ b/docker-compose-nrw.yml
@@ -61,6 +61,8 @@ services:
       - ./nrw/geonetwork/catalog/components/toolbar/partials/top-toolbar.html:/var/lib/jetty/webapps/geonetwork/catalog/components/toolbar/partials/top-toolbar.html
       - ./nrw/geonetwork/catalog/views/default/templates/index.html:/var/lib/jetty/webapps/geonetwork/catalog/views/default/templates/index.html
       ## *.xsl file changes ##
+      # correct aria-label for map coordinates fields #
+      - ./nrw/xslt/render-functions.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/formatter/xslt/render-functions.xsl
       # adjust the header in the permalink view
       - ./nrw/geonetwork/xslt/skin.xsl:/var/lib/jetty/webapps/geonetwork/xslt/skin/default/skin.xsl
       # hide minimap on Search page
