remove Latest News/Most Popular section from homepage. Fixes accesibility issues in SUPPORT-20256/NRW bug ref 169649, SUPPORT-20228/NRW bug ref 169616, SUPPORT-20209/NRW bug ref unknown

--- a/docker-compose-nrw.yml
+++ b/docker-compose-nrw.yml
@@ -61,6 +61,7 @@ services:
       - ./nrw/geonetwork/catalog/components/toolbar/partials/top-toolbar.html:/var/lib/jetty/webapps/geonetwork/catalog/components/toolbar/partials/top-toolbar.html
       - ./nrw/geonetwork/catalog/components/pages/partials/top.html:/var/lib/jetty/webapps/geonetwork/catalog/components/pages/partials/top.html
       - ./nrw/geonetwork/catalog/views/default/templates/index.html:/var/lib/jetty/webapps/geonetwork/catalog/views/default/templates/index.html
+      - ./nrw/geonetwork/catalog/views/default/templates/home.html:/var/lib/jetty/webapps/geonetwork/catalog/views/default/templates/home.html
       ## *.xsl file changes ##
       # correct aria-label for map coordinates fields #
       - ./nrw/xslt/render-functions.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/formatter/xslt/render-functions.xsl
